hydro2/hydro2-operator-derive/tests/trybuild/fail_07_input_out_of_order.stderr
error: Input keys must be in strictly increasing order: input0, input1, etc.
  --> tests/trybuild/fail_07_input_out_of_order.rs:13:5
   |
13 |     input2="i64" // skipping input1 → should fail
   |     ^^^^^^
